# shopping_assistant

./: .coveragerc  .env  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  demo.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
.github/workflows/: ci.yml
src/color_sentiment_extractor/: README.md  __init__.py  demo.py  project_structure.txt
src/color_sentiment_extractor/data/: README.md  expression_context_rules.json  expression_definition.json  known_modifiers.json  product_metadata.json  products.json
src/color_sentiment_extractor/extraction/: README.md  __init__.py  orchestrator.py
src/color_sentiment_extractor/extraction/color/: README.md  __init__.py  constants.py  vocab.py
src/color_sentiment_extractor/extraction/color/extraction/: compound.py  standalone.py
src/color_sentiment_extractor/extraction/color/llm/: README.md  __init__.py  llm_api_client.py  types.py
src/color_sentiment_extractor/extraction/color/logic/: README.md  __init__.py  color_categorizer.py  color_pipeline.py  rgb_pipeline.py
src/color_sentiment_extractor/extraction/color/logic/classification/: README.md  __init__.py  categorizer.py
src/color_sentiment_extractor/extraction/color/logic/pipelines/: README.md  __init__.py  phrase_pipeline.py  rgb_pipeline.py
src/color_sentiment_extractor/extraction/color/recovery/: README.md  __init__.py  fuzzy_recovery.py  llm_recovery.py  modifier_resolution.py
src/color_sentiment_extractor/extraction/color/strategies/: README.md  __init__.py  compound.py  standalone.py
src/color_sentiment_extractor/extraction/color/suffix/: README.md  __init__.py  rules.py
src/color_sentiment_extractor/extraction/color/token/: README.md  __init__.py  split.py
src/color_sentiment_extractor/extraction/color/utils/: README.md  __init__.py  rgb_distance.py
src/color_sentiment_extractor/extraction/general/: README.md  __init__.py  sentiment_core.py  sentiment_router.py  types.py
src/color_sentiment_extractor/extraction/general/expression/: README.md  __init__.py  expression_helpers.py
src/color_sentiment_extractor/extraction/general/fuzzy/: README.md  __init__.py  alias_validation.py  conflict_rules.py  expression_match.py  fuzzy_core.py  scoring.py
src/color_sentiment_extractor/extraction/general/sentiment/: README.md  __init__.py  core.py  router.py
src/color_sentiment_extractor/extraction/general/token/: README.md  __init__.py  base_recovery.md  base_recovery.py  normalize.md  normalize.py
src/color_sentiment_extractor/extraction/general/token/split/: README.md  __init__.py  split_core.py
src/color_sentiment_extractor/extraction/general/token/suffix/: README.md  __init__.py  recovery.py  registry.py
src/color_sentiment_extractor/extraction/general/utils/: README.md  __init__.py  load_config.md  load_config.py  log.md  log.py  nlp_utils.md  nlp_utils.py
src/color_sentiment_extractor/extraction/general/vocab/: README.md  cosmetic_nouns.py
tests/: test_color_llm.py  test_color_logic_classification.py  test_color_logic_pipelines.py  test_color_recovery.py  test_color_strategies.py  test_color_suffix.py  test_color_token.py  test_color_utils.py  test_general_expression.py  test_general_fuzzy.py  test_general_sentiment.py  test_general_token.py  test_general_token_split.py  test_general_token_suffix.py  test_general_utils.py  test_smoke.py
