[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "color-sentiment-extractor"
version = "0.1.0"
description = "Extract colors from text, split by sentiment, and map them to RGB."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Margot Rudnianski" }]
keywords = ["nlp", "colors", "sentiment", "spacy", "text-processing"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Typing :: Typed"
]
dependencies = [
  "spacy>=3.7,<4",
  "numpy",
  "tqdm"
]

[project.urls]
Homepage = "https://github.com/margotrud/shopping_assistant"

[project.scripts]
cse-demo = "color_sentiment_extractor.demo:main"

[project.optional-dependencies]
dev = [
  "pytest",
  "coverage",
  "ruff",
  "black",
  "isort",
  "mypy",
  "pre-commit"
]

# --- Setuptools: src/ layout ---
[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["color_sentiment_extractor*"]

# Inclure données runtime (si tu as src/color_sentiment_extractor/data/**)
[tool.setuptools.package-data]
color_sentiment_extractor = ["data/**/*"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
ignore_missing_imports = true
allow_untyped_defs = true
allow_unused_ignores = true
# Optionnel mais utile pour ce projet
disable_error_code = [
  "assignment",       # int↔float, set↔frozenset, tuples, etc.
  "call-arg",         # kwargs supplémentaires (ex: debug=)
  "truthy-function"   # checks du type: if _recover_base: ...
]
